--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Choisis ton partenaire</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/config.js" defer></script>
+    <script src="scripts/characters.js" defer></script>
     <script src="scripts/connect.js" defer></script>
     <script src="scripts/index.js" defer></script>
 </head>
