--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choisis ton partenaire</title>
+    <title>Choisir un personnage</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/config.js" defer></script>
     <script src="scripts/characters.js" defer></script>
@@ -16,15 +16,8 @@
 
     <h1 class="title">Choisis ton partenaire</h1>
 
-    <div class="characters-container">
-        <div class="character-card" onclick="chooseCharacter('tendre')">
-            <h2>Homme Black Tendre</h2>
-            <p>Joueur, discret, aime les caresses en public...</p>
-        </div>
-        <div class="character-card" onclick="chooseCharacter('dominateur')">
-            <h2>Homme Black Dominateur</h2>
-            <p>Directif, aime soumettre et utiliser des jouets...</p>
-        </div>
+    <div class="characters-container" id="characters-container">
+        <!-- Les personnages seront ajoutés dynamiquement -->
     </div>
 
 </body>
